<resources>
    <string name="app_name">Погода</string>
    <string name="temperature" translatable="false">%1$d°C</string>
    <string name="input_city">Введите ваш город…</string>
    <string name="check_weather">Узнать погоду</string>
    <string name="text_weather">Ясно</string>
    <string name="wind">Ветер: %1$d м/с</string>
    <string name="humidity">Влажность: %1$d</string>
    <string name="pressure">Атмосферное давление: %1$d мм рт. ст.</string>
    <string name="water">Температура воды: +13°C</string>
    <string name="check_wind">Ветер</string>
    <string name="check_humidity">Влажность</string>
    <string name="check_pressure">Атмосферное давление</string>
    <string name="check_water">Температура воды</string>
    <string name="error">ОШИБКА</string>
    <string name="title_activity_history">HistoryActivity</string>

    <string name="menu">МЕНЮ</string>
    <string name="nav_main">Главная</string>
    <string name="nav_history">История</string>
    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Поиск</string>
    <string name="close_dialog">Закрыть</string>
    <string name="title_dialog">Ошибка получения данных</string>
</resources>