<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".WeatherFragment">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_wind"
            android:orderInCategory="100"
            android:title="@string/check_wind"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_humidity"
            android:orderInCategory="100"
            android:title="@string/check_humidity"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_pressure"
            android:orderInCategory="100"
            android:title="@string/check_pressure"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_water"
            android:orderInCategory="100"
            android:title="@string/check_water"
            app:showAsAction="never" />
    </group>
</menu>