<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".FirstSettings">

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_city"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/check_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_wind" />

        <CheckBox
            android:id="@+id/check_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_humidity" />

        <CheckBox
            android:id="@+id/check_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_pressure" />

        <CheckBox
            android:id="@+id/check_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_water" />
    </LinearLayout>

    <Button
        android:id="@+id/check_the_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_the_weather"
        android:enabled="false" />
</LinearLayout>